clusters/apps/arr/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: apps
  annotations:
    spec.ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: torrent.homelab.haseebmajid.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
        - torrent.homelab.haseebmajid.dev
      secretName: torrent-haseebmajid-dev-tls
